--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-  <!-- changes -->
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/images/nitaiLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NITAI INNOVATIONS</title>
+  <title>Nitai Innovations</title>
 </head>
 
 <body>
